2008-02-20  Neal H. Walfield  <neal@gnu.org>

	* object.c (FOLIOS_CORE): Increase value.

2008-02-20  Neal H. Walfield  <neal@gnu.org>

	* list.h (struct list) [! NDEBUG]: Add field name.
	(list_init): Add parameter name.  Update users.
	(LIST_CLASS): Update template to account for list_init changes.
	(list_unlink): Improve debugging output.
	* activity.c (activity_prepare): Explicitly initialize all lists.

2008-02-18  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): When raising a fault, set INFO.DISCARDED
	to DISCARDED, not true.

2008-02-18  Neal H. Walfield  <neal@gnu.org>

	* ager.c (ager_loop): Improve debugging output.

2008-02-18  Neal H. Walfield  <neal@gnu.org>

	* pager.c (pager_collect): When looking for a victim activity, if
	none are found, repeat the process giving the number of active
	pages less weight.  Fix asserts.

2008-02-18  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): When resolving a fault, if the page was
	discarded, reflect the fault.
	* object.c (object_find): If the page was discarded, return NULL.
	(folio_object_alloc): Clear the discarded flag.
	* object.c (memory_object_destroy): Don't set the discarded flag
	or content flag here.
	* memory.c (memory_frame_allocate): Set them here.

2008-02-18  Neal H. Walfield  <neal@gnu.org>

	* cap-lookup.c (lookup) [RM_INTERN]: When generating a capability
	to an object in a folio, don't lookup the object and then use
	object_to_cap, just use folio_object_cap.

2008-02-16  Neal H. Walfield  <neal@gnu.org>

	* object.h (struct object_desc): Add fields mapped, shared and
	floating.
	(object_desc_unmap): Only unmap a page if DESC->MAPPED is true.
	(object_desc_flush): Call object_desc_unmap rather than copying
	the code.
	* object.c (object_find_soft): If ODESC->FLOATING is true, claim
	the object.  Set ODESC->FLOATING to false.
	(folio_object_alloc): After clearing the page, flush it and then
	ODESC->DIRTY to false.  Set ODESC->SHARED to false.